[tool.poetry]
name = "armada-api"
version = "0.1.0"
description = "AI Concierge"
authors = ["Joao Moura, Brandon Hancock"]
packages = [
    { include = "armada", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.12"
crewai = "^0.11.0"
duckduckgo-search = "^4.4.2"
python-dotenv = "^1.0.1"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.3"
pip = "^24.0"
flask = "^3.0.2"
celery = "^5.3.6"
redis = "^5.0.3"
rabbitmq = "^0.2.0"
setuptools = "^69.2.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2"

[tool.pyright]
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"